# campbot

./: Cargo.toml  Dockerfile  docker-compose.yaml  package.json
src/: dev.ts  main.rs  main.ts
src/events/: common.ts
